one version of the application